// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`printing test reports > resource traces are not shown if debug mode is disabled 1`] = `
"fail ┌ hello.w » root/env0/test:test
     │ sleeping for 500 ms
     └ Error: Object does not exist (key=file.txt)"
`;

exports[`printing test reports > resource traces are shown if debug mode is enabled 1`] = `
"fail ┌ hello.w » root/env0/test:test
     │ [trace] Push (message=cool).
     │ sleeping for 500 ms
     │ [trace] Sending messages (messages=[\\"cool\\"], subscriber=sim-4).
     │ [trace] Invoke (payload=\\"{\\\\\\"messages\\\\\\":[\\\\\\"cool\\\\\\"]}\\").
     │ [trace] Subscriber error - returning 1 messages to queue: Missing environment variable: QUEUE_HANDLE_7164aec4
     │ [trace] Get (key=file.txt).
     │ [trace] Invoke (payload=\\"\\").
     └ Error: Object does not exist (key=file.txt)"
`;

exports[`test options > wing test with output file calls writeResultsToFile 1`] = `
[
  {
    "pass": true,
    "path": "root/env0/test:put",
    "traces": [
      {
        "data": {
          "message": "Bundled code (700525 bytes).",
        },
        "sourcePath": "root/env0/test:put/Handler",
        "sourceType": "@winglang/sdk.cloud.Function",
        "timestamp": "2023-10-30T23:03:09.759Z",
        "type": "resource",
      },
      {
        "data": {
          "message": "Put (key=test1.txt).",
          "status": "success",
        },
        "sourcePath": "root/env0/cloud.Bucket",
        "sourceType": "@winglang/sdk.cloud.Bucket",
        "timestamp": "2023-10-30T23:03:09.775Z",
        "type": "resource",
      },
      {
        "data": {
          "message": "Get (key=test1.txt).",
          "result": "\\"Foo\\"",
          "status": "success",
        },
        "sourcePath": "root/env0/cloud.Bucket",
        "sourceType": "@winglang/sdk.cloud.Bucket",
        "timestamp": "2023-10-30T23:03:09.778Z",
        "type": "resource",
      },
      {
        "data": {
          "message": "Invoke (payload=\\"\\").",
          "status": "success",
        },
        "sourcePath": "root/env0/test:put/Handler",
        "sourceType": "@winglang/sdk.cloud.Function",
        "timestamp": "2023-10-30T23:03:09.779Z",
        "type": "resource",
      },
    ],
  },
]
`;

exports[`test options > wing test with output file calls writeResultsToFile 2`] = `
{
  "duration": 901,
  "results": {
    "test.test.w": {
      "put": {
        "pass": true,
        "path": "root/env0/test:put",
        "traces": [
          {
            "data": {
              "message": "Bundled code (700525 bytes).",
            },
            "sourcePath": "root/env0/test:put/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "2023-10-30T23:03:09.759Z",
            "type": "resource",
          },
          {
            "data": {
              "message": "Put (key=test1.txt).",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Bucket",
            "sourceType": "@winglang/sdk.cloud.Bucket",
            "timestamp": "2023-10-30T23:03:09.775Z",
            "type": "resource",
          },
          {
            "data": {
              "message": "Get (key=test1.txt).",
              "result": "\\"Foo\\"",
              "status": "success",
            },
            "sourcePath": "root/env0/cloud.Bucket",
            "sourceType": "@winglang/sdk.cloud.Bucket",
            "timestamp": "2023-10-30T23:03:09.778Z",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=\\"\\").",
              "status": "success",
            },
            "sourcePath": "root/env0/test:put/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "2023-10-30T23:03:09.779Z",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;
